logs/archive/tools_error_3.txt
warning: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client\Cargo.toml: unused manifest key: dependencies.tokio.getrandom
warning: unused import: `HashSet`
  --> crates\ask_pete_core\src\lib.rs:11:33
   |
11 | use std::collections::{HashMap, HashSet};
   |                                 ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `ask_pete_core` (lib) generated 1 warning (run `cargo fix --lib -p ask_pete_core` to apply 1 suggestion)
    Checking ask_pete_tools v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_tools)
error[E0432]: unresolved import `domain_trainyard::app`
 --> crates\ask_pete_tools\src\main.rs:1:23
  |
1 | use domain_trainyard::app::App;
  |                       ^^^ could not find `app` in `domain_trainyard`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `ask_pete_tools` (bin "frontend_bin") due to 1 previous error
